# Lab_RPP

./: CMakeLists.txt  compile_flags  primes_seq.cpp
arch/: primes_mpi.cpp  primes_omp.cpp
lab_mpi/: Makefile  primes_mpi.cpp
lab_openmp/: Makefile  primes_omp.cpp
